--- a/package.json
+++ b/package.json
@@ -7,6 +7,20 @@
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev": "nodemon src/index.js"
-  }
+    "dev": "nodemon src/server.js"
+  },
+  "name": "apirestful",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ivanbonnot/API-RESTful.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ivanbonnot/API-RESTful/issues"
+  },
+  "homepage": "https://github.com/ivanbonnot/API-RESTful#readme",
+  "description": ""
 }
